syntax = "proto3";

package books;

service Books {
  rpc AddBook (AddBookRequest) returns (BookReply) {}
  rpc GetBook (GetBookRequest) returns (BookReply) {} 
  rpc GetBooks (GetBooksRequest) returns (BooksReply) {}
}

message AddBookRequest {
  string authors = 1;
  string title = 2;
}

message BookReply {
  int32 id = 1;
  string authors = 2;
  string title = 3;
}

message GetBookRequest {
  int32 id = 1;
}

message GetBooksRequest {

}

message BooksReply {
  repeated BookReply items = 1;
}
